[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dm-env"
version = "1.6.0"
description = "A Python interface for Reinforcement Learning environments."
authors = [
    {name = "DeepMind"}
]
license = {text = "Apache License, Version 2.0"}
keywords = ["reinforcement-learning", "python", "machine learning"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "absl-py",
    "dm-tree>=0.1.9",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.dynamic]
version = {attr = "dm_env._metadata.__version__"}

[tool.setuptools.packages.find]
exclude = ["examples"]
